fix(ts/components/diversionPage): contain z-index's within map so alert shows

--- a/assets/css/_diversion_page.scss
+++ b/assets/css/_diversion_page.scss
@@ -17,6 +17,9 @@
 
   &__map {
     grid-area: map;
+    > * {
+      contain: paint;
+    }
   }
 
   @include media-breakpoint-up(md) {
